<resources>
    <string name="app_name">Хочу помочь</string>
    <string name="app_logo">App logo</string>
    <string name="loading_title">Загрузка…</string>
    <string name="dev_app_logo">Dev App Logo</string>
    <string name="edit">Edit</string>
    <string name="profile_text">Профиль</string>
    <string name="nested_scroll_description">Страница прокрутки</string>
    <string name="profile_picture">Фотография профиля</string>
    <string name="profile_name">Константинов Денис</string>
    <string name="date_birth_label">Дата рождения</string>
    <string name="date_birth_text">01 февраля 1980</string>
    <string name="work_label">Сфера деятельности</string>
    <string name="work_text">Хирургия, травмотология</string>
    <string name="push_label">Получать push-уведомления</string>
    <string name="your_friends_label">Ваши друзья</string>
    <string name="icon">Icon</string>
    <string name="name_person_3">Дмитрий Валерьевич</string>
    <string name="name_person_2">Евгений Александров</string>
    <string name="name_person_1">Виктор Кузнецов</string>
    <string name="exit_btn">Выйти из аккаунта</string>
    <string name="news">Новости</string>
    <string name="search">Поиск</string>
    <string name="help">Помочь</string>
    <string name="history">История</string>
    <string name="profile">Профиль</string>
    <string name="children">Дети</string>
    <string name="adult">Взрослые</string>
    <string name="old">Пожилые</string>
    <string name="animals">Животные</string>
    <string name="events">Мероприятия</string>
    <string name="event_tab_label">По мероприятиям</string>
    <string name="nko_tab_label">По НКО</string>
    <string name="enter_name_org_hint_lable">Введите название организации</string>
    <string name="choose_photo_label">Выбрать фото</string>
    <string name="make_photo_label">Сделать снимок</string>
    <string name="delete">Удалить</string>
    <string name="reminder_photo_permission_toast">Для съемки фото необходимо разрешение на использование камеры</string>
    <string name="search_event_result_label">Ключевые слова: мастер-класс, помощь \nРезультаты поиска: 109 мероприятий</string>
    <string name="preview_customer_event">Во имя жизни</string>
    <string name="filter">Фильтр</string>
    <string name="done">Применить</string>
    <string name="choose_category_label">Выберите категорию помощи</string>
    <string name="help_category_label">Категории помощи</string>
    <string name="share">Поделиться</string>
    <string name="contact_us_label"><u>Напишите нам</u></string>
    <string name="sample_event_title">Спонсоры отремонтируют школу-интернат</string>
    <string name="daytime_text_with_left_days">Осталось %1$d дней (%2$s)</string>
    <string name="sample_foundation_label">Благотворительный Фонд «Счастливый Мир»</string>
    <string name="sample_adress_text">Санкт-Петербург, Кирочная улица,\nд. 50А, каб. 208</string>
    <string name="sample_contacts_text">+7 (937) 037 37–73\n+7 (937) 016 16–16</string>
    <string name="ask_question_text">У вас есть вопросы?</string>
    <string name="sample_event_description_text">Участники и болельщики смогли весело и активно провести время на «Петербургском благотворительном марафоне» и при этом\nфинансово поучаствовать в помощи детям.\n\nПри этом финансово поучаствовать в помощи\nдетям. При этом финансово поучаствовать в\nпомощи детям.</string>
    <string name="foundation_site_text">Перейти на сайт организаии</string>
    <string name="sample_counter_text">+120</string>
    <string name="help_clothes_text">Помочь\nвещами</string>
    <string name="become_volunteer_text">Стать\nволонтером</string>
    <string name="professional_help_text">Проф.\nпомощь</string>
    <string name="help_money_text">Помочь\nденьгами</string>
    <string name="authorization_label">Авторизация</string>
    <string name="forgot_pass_text"><u>Забыли пароль?</u></string>
    <string name="registration_label_tv"><u>Регистрация</u></string>
    <string name="auth_social_media_text">Для участия в мероприятиях войдите\nв приложение через социальые сети</string>
    <string name="vk">Vk</string>
    <string name="facebook">Facebook</string>
    <string name="ok">OK</string>
    <string name="auth_app_text">Или авторизуйтесь через приложение</string>
    <string name="e_mail">E-mail</string>
    <string name="enter_email_text">Введите e-mail</string>
    <string name="password">Пароль</string>
    <string name="enter_pass">Введите пароль</string>
    <string name="enter_text_btn">ВОЙТИ</string>
    <string name="search_example_label">Например,</string>
    <string name="search_example_text"><u>мастер-класс, помощь</u></string>
    <string name="empty_search_list_label_text">Напишите в строке поиска название\nмероприятия или ключевые слова.</string>
    <string name="error_loading_toast">Не удалось загрузить данные</string>
</resources>