<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/news"
        android:enabled="true"
        android:icon="@drawable/ic_news"
        android:title="@string/news"/>
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"/>

    <item
        android:id="@+id/help"
        android:enabled="true"
        android:icon="@drawable/ic_help"
        android:title="@string/help"/>

    <item
        android:id="@+id/history"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/history"/>

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
</menu>