<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/choose_photo_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xl"
        android:layout_marginTop="@dimen/spacing_xxl_2"
        android:drawablePadding="@dimen/spacing_xl"
        android:text="@string/choose_photo_label"
        android:textColor="@color/black_87"
        android:textSize="@dimen/text_size_l"
        app:drawableStartCompat="@drawable/ic_upload"
        app:drawableTint="@color/turtle_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/make_photo_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xl"
        android:layout_marginTop="@dimen/spacing_xxl_2"
        android:drawablePadding="@dimen/spacing_xl"
        android:text="@string/make_photo_label"
        android:textColor="@color/black_87"
        android:textSize="@dimen/text_size_l"
        app:drawableStartCompat="@drawable/ic_camera"
        app:drawableTint="@color/turtle_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_photo_item" />

    <TextView
        android:id="@+id/delete_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xl"
        android:layout_marginTop="@dimen/spacing_xxl_2"
        android:layout_marginBottom="@dimen/spacing_xxl_2"
        android:drawablePadding="@dimen/spacing_xl"
        android:text="@string/delete"
        android:textColor="@color/black_87"
        android:textSize="@dimen/text_size_l"
        app:drawableStartCompat="@drawable/ic_delete"
        app:drawableTint="@color/turtle_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/make_photo_item" />

</androidx.constraintlayout.widget.ConstraintLayout>