<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/spacing_xxl_2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/spacing_xxl_2" />

    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_xl"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_l"
        app:indicatorColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintTop_toBottomOf="@id/logo_iv" />

    <TextView
        android:id="@+id/loading_tv"
        style="@style/TextStyle10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxl_2"
        android:text="@string/loading_title"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_start"
        app:layout_constraintTop_toBottomOf="@id/progress_circular" />

    <ImageView
        android:id="@+id/dev_logo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_xl"
        android:contentDescription="@string/dev_app_logo"
        android:src="@drawable/logo_mss"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_start"
        app:layout_constraintTop_toBottomOf="@id/loading_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>