<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_xs"
    app:cardCornerRadius="@dimen/corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/news_event_iv"
            android:layout_width="match_parent"
            android:layout_height="222dp"
            android:layout_marginStart="@dimen/spacing_xxs"
            android:layout_marginTop="@dimen/spacing_xxs"
            android:layout_marginEnd="@dimen/spacing_xxs"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/image_charity"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/fade"
            app:layout_constraintBottom_toBottomOf="@id/news_event_iv"
            app:layout_constraintEnd_toEndOf="@id/news_event_iv"
            app:layout_constraintStart_toStartOf="@id/news_event_iv"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_marginStart="@dimen/spacing_xxl_2"
            android:layout_marginEnd="@dimen/spacing_xxl_2"
            android:id="@+id/news_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/officina_sans_scc_extrabold"
            android:gravity="center"
            android:maxLines="2"
            android:textColor="@color/blue_grey"
            android:textSize="@dimen/text_size_l"
            app:layout_constraintBottom_toBottomOf="@id/news_event_iv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/news_event_iv"
            tools:text="@string/sample_event_title" />

        <ImageView
            android:id="@+id/decor_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xs"
            android:src="@drawable/decor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/news_title_tv"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/news_description_tv"
            style="@style/TextStyle10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xxl"
            android:layout_marginTop="@dimen/spacing_xs"
            android:layout_marginEnd="@dimen/spacing_xxl"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/decor_iv"
            tools:text="@string/sample_event_description_text" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxl_2"
            android:layout_marginTop="@dimen/spacing_m"
            android:background="@color/turtle_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/news_description_tv" />

        <TextView
            android:id="@+id/news_datetime_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/spacing_xs"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_s"
            app:drawableStartCompat="@drawable/ic_calendar"
            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintEnd_toEndOf="@id/view"
            app:layout_constraintStart_toStartOf="@id/view"
            app:layout_constraintTop_toTopOf="@id/view"
            tools:text="@string/daytime_text_with_left_days" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>